# visualization

./: README.md
api/: Cargo.toml  bigger_mol.json  mol.json
api/src/: main.rs
web/: .prettier.json  README.md  package.json
web/src/: App.svelte  api.ts
web/src/components/: GeneViewer.svelte  MolViewer.svelte
