[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-cors = "0.6.0-beta.2"
rand = "0.8.4"
serde_json = "1.0.68"
env_logger = "0.9.0"
log = "0.4.14"
